2005-09-20  Tom Tromey  <tromey@redhat.com>

	* configure: Rebuilt.
	* configure.ac: Added --enable-gcjx-debugging.

2005-09-20  Tom Tromey  <tromey@redhat.com>

	* factory.cc (open_zip_file): Updated.
	* reader/readbuffer.cc (read_byte_buffer): Updated.
	* reader/readbuffer.hh (read_byte_buffer::where): New field.
	(read_byte_buffer): Added argument.
	* reader/fdreader.cc (read_all): Use get_location.
	(get_mtime): Use get_location.
	* reader/mmapbuffer.cc (mmap_byte_buffer): Updated.
	* reader/mmapbuffer.hh (mmap_byte_buffer::where): New field.
	(mmap_byte_buffer): Added argument.
	* reader/reader.hh (reader::get_location): New method.
	* reader/classbytes.cc (apply): Don't print a newline.

2005-09-17  Ranjit Mathew  <rmathew@gcc.gnu.org>

	* defassign.cc (variable_state::check_loop): Complain about possible
	multiple assignments only if the variable in question is definitely
	assigned and not definitely unassigned.
	(variable_state::print): Make const method and use const iterators.
	Print out only definitely [un]assigned variables.
	
2005-09-16  Tom Tromey  <tromey@redhat.com>

	* model/class.cc (add_captured_variable): Update field_map.

2005-09-15  Tom Tromey  <tromey@redhat.com>

	* verify.h (vfy_find_class): Handle primitive types.

2005-09-15  Tom Tromey  <tromey@redhat.com>

	* bytecode/classwriter.cc (write): Write 1.5 version number if
	needed.
	* bytecode/verify.cc (check_constant): Handle resolved classes as
	well.

2005-09-14  Tom Tromey  <tromey@redhat.com>

	* bytecode/block.cc (optimize): Ensure conditional occurs just
	before goto before removing.

2005-09-13  Tom Tromey  <tromey@redhat.com>

	* bytecode/generate.cc (emit_saved_cleanup): Handle case where
	handler variable is -2.

2005-09-13  Tom Tromey  <tromey@redhat.com>

	* bytecode/byteutil.hh (return_p): New function.
	* bytecode/block.cc (optimize): Handle 'if' optimization when
	'goto' is in following block.  Optimize a 'goto' to a 'return'.
	Include byteutil.hh.
